--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "zombie-hunter"
-version = "0.6.0"
+version = "0.7.0"
 description = "A FinOps tool that hunts zombie cloud resources and enables cleanup via Slack"
 readme = "README.md"
 license = {text = "MIT"}
@@ -35,6 +35,7 @@ dependencies = [
     "azure-mgmt-monitor>=6.0.0",
     "slack-bolt>=1.18.0",
     "slack-sdk>=3.26.0",
+    "aiohttp>=3.9.0",
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
     "pyyaml>=6.0.1",
