--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ azure-mgmt-monitor>=6.0.0
 # Slack integration
 slack-bolt>=1.18.0
 slack-sdk>=3.26.0
+aiohttp>=3.9.0
 
 # Configuration & validation
 pydantic>=2.5.0
